# stegaLock

./: .gitignore  LICENSE
APPS/: stegalock_system_design_documentation.md
APPS/data-encryption-project/: README.md  pyproject.toml  stega.py
APPS/stega-lock-frontend/: index.html  package-lock.json  package.json
APPS/stega-lock-frontend/src/: App.tsx  Router.tsx  main.scss  main.tsx
APPS/stega-lock-frontend/src/Pages/Auth/: Auth.tsx
APPS/stega-lock-frontend/src/Pages/Home/: Home.scss  Home.tsx
APPS/stega-lock-frontend/src/Pages/Home/components/: PasswordDataTable.scss  PasswordDataTable.tsx  ProfileSection.scss  ProfileSection.tsx
APPS/stega-lock-frontend/src/Pages/Landing/: Landing.scss  Landing.tsx
APPS/stega-lock-frontend/src/Pages/Landing/component/: FeaturesSection.tsx  GithubIcon.tsx  HowItWorks.tsx  LandingFooter.tsx  LandingHero.tsx  LandingNav.tsx  TerminalDemo.tsx
APPS/stega-lock-frontend/src/Pages/Layout/: Layout.tsx
